--- a/main/landing-page.html
+++ b/main/landing-page.html
@@ -41,8 +41,8 @@ html, body {
     width: 28px;
     height: 28px;
     cursor: pointer;
-    border-radius: 8px;
     transition: 0.2s;
+    object-fit: contain;
 }
 .nav img:hover { filter: brightness(10); }
 
@@ -53,12 +53,10 @@ html, body {
     top: -100%;
     left: 0;
     transition: 0.35s ease;
-    padding: 0;
     z-index: 9000;
 }
 
 .menu-inner {
-    width: 100%;
     margin-top: 60px;
     height: calc(100vh - 60px);
     display: flex;
@@ -67,7 +65,6 @@ html, body {
 }
 
 .menu-header {
-    width: 100%;
     display: flex;
     justify-content: space-between;
     font-size: 22px;
@@ -80,11 +77,11 @@ html, body {
     height: 26px;
     cursor: pointer;
     transition: 0.2s;
+    object-fit: contain;
 }
 .menu-header img:hover { filter: brightness(10); }
 
 .menu-options {
-    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -92,7 +89,6 @@ html, body {
 }
 
 .menu-option {
-    width: 100%;
     display: flex;
     align-items: center;
     padding: 14px 10px;
@@ -105,6 +101,7 @@ html, body {
     width: 24px;
     height: 24px;
     margin-right: 12px;
+    object-fit: contain;
     transition: 0.2s;
 }
 
@@ -112,14 +109,10 @@ html, body {
     background: #c4a7e7;
     color: #11111b;
 }
-
-.menu-option:hover img {
-    filter: brightness(10);
-}
+.menu-option:hover img { filter: brightness(10); }
 
 .page-wrap {
     margin-top: 90px;
-    width: 100%;
 }
 
 .hero {
@@ -128,7 +121,6 @@ html, body {
     border-radius: 8px;
     overflow: hidden;
     position: relative;
-    background: #000000;
 }
 
 .hero img {
@@ -148,10 +140,6 @@ html, body {
 }
 
 .hero-content h3 { color: #c4a7e7; }
-.hero-content p {
-    margin-top: 5px;
-    margin-bottom: 15px;
-}
 
 .hero-content button {
     background: #313244;
@@ -191,27 +179,33 @@ html, body {
     transition: 0.2s;
 }
 
-.explore-left, .explore-right { display: flex; align-items: center; }
+.explore-left, .explore-right {
+    display: flex;
+    align-items: center;
+}
+
+.explore-left img,
+.explore-right img {
+    object-fit: contain;
+    transition: 0.2s;
+}
 
 .explore-left img {
     width: 24px;
     height: 24px;
     margin-right: 8px;
-    transition: 0.2s;
 }
+
 .explore-right img {
     width: 20px;
     height: 20px;
-    transition: 0.2s;
 }
 
 .explore-bar:hover {
     background: #c4a7e7;
     color: #11111b;
 }
-.explore-bar:hover img {
-    filter: brightness(10);
-}
+.explore-bar:hover img { filter: brightness(10); }
 
 .cards {
     display: flex;
@@ -224,24 +218,19 @@ html, body {
     background: #1e1e2e;
     border-radius: 8px;
     padding: 20px;
-    text-align: center;
     border: 2px solid transparent;
     transition: 0.2s;
 }
 
-.card:hover {
-    border: 2px solid #c4a7e7;
-}
+.card:hover { border-color: #c4a7e7; }
 
 .card img {
     width: 40px;
     height: 40px;
+    object-fit: contain;
     transition: 0.2s;
 }
-
-.card:hover img {
-    filter: brightness(10);
-}
+.card:hover img { filter: brightness(10); }
 
 .testimonials {
     display: flex;
@@ -258,19 +247,15 @@ html, body {
     transition: 0.2s;
 }
 
-.testimonial:hover {
-    border: 2px solid #c4a7e7;
-}
+.testimonial:hover { border-color: #c4a7e7; }
 
 .testimonial img {
     width: 40px;
     height: 40px;
+    object-fit: contain;
     transition: 0.2s;
 }
-
-.testimonial:hover img {
-    filter: brightness(10);
-}
+.testimonial:hover img { filter: brightness(10); }
 
 .contact-form input,
 .contact-form textarea {
@@ -293,17 +278,9 @@ html, body {
     cursor: pointer;
     transition: 0.2s;
 }
-
 .contact-form button:hover {
     background: #c4a7e7;
     color: #11111b;
-}
-
-.contact-icons-text {
-    margin-top: 25px;
-    margin-bottom: 10px;
-    font-size: 14px;
-    color: #c4a7e7;
 }
 
 .contact-icons img {
@@ -311,38 +288,42 @@ html, body {
     height: 36px;
     margin: 10px;
     cursor: pointer;
+    object-fit: contain;
     transition: 0.2s;
 }
-
-.contact-icons img:hover {
-    filter: brightness(10);
-}
+.contact-icons img:hover { filter: brightness(10); }
 
 footer {
     width: 100%;
     background: #181825;
-    padding: 25px 0;
+    padding: 25px 10px;
     margin-top: 50px;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+}
+
+footer > div:first-child {
+    justify-self: start;
+}
+
+footer > div:last-child {
+    justify-self: end;
 }
 
 footer img {
     width: 25px;
     height: 25px;
-    margin: 0 5px;
     cursor: pointer;
+    object-fit: contain;
     transition: 0.2s;
 }
-
-footer img:hover {
-    filter: brightness(10);
-}
+footer img:hover { filter: brightness(10); }
 
 .footer-center {
-    width: 100%;
+    justify-self: center;
     text-align: center;
-    position: absolute;
+    white-space: nowrap;
 }
 
 @media (max-width: 1000px) {
@@ -351,6 +332,15 @@ footer img:hover {
     }
     .card, .testimonial {
         width: 99%;
+    }
+}
+
+@media (max-width: 600px) {
+    .footer-center {
+        font-size: 11px;
+        max-width: 45vw;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
 </style>
@@ -363,7 +353,6 @@ function openMenu() {
 
 function closeMenu() {
     document.getElementById("menu").style.top = "-100%";
-
     setTimeout(() => {
         document.body.style.overflow = "auto";
     }, 350);
@@ -374,10 +363,10 @@ function closeMenu() {
 <body>
 
 <div class="nav">
-    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/home.png" onclick="location.href='https://nexusbytedev.github.io/Website/main/landing-page.html'">
-    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/search.png" onclick="location.href='https://nexusbytedev.github.io/Website/main/search.png'">
-    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/account.png" onclick="location.href='https://nexusbytedev.github.io/Website/main/account/login.html'">
-    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/settings.png" onclick="location.href='https://nexusbytedev.github.io/Website/main/settings/general-settings.html'">
+    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/home.png">
+    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/search.png">
+    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/account.png">
+    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/settings.png">
     <img src="https://nexusbytedev.github.io/Website/assets/media/icons/menu.png" onclick="openMenu()">
 </div>
 
@@ -395,7 +384,7 @@ function closeMenu() {
             <div class="menu-option" onclick="location.href='https://nexusbytedev.github.io/Website/main/services/explore-services.html'"><img src="https://nexusbytedev.github.io/Website/assets/media/icons/services.png"><span>Services</span></div>
             <div class="menu-option" onclick="location.href='https://nexusbytedev.github.io/Website/main/tools/explore-tools.html'"><img src="https://nexusbytedev.github.io/Website/assets/media/icons/tools.png"><span>Tools</span></div>
             <div class="menu-option" onclick="location.href='https://nexusbytedev.github.io/Website/main/store/explore-store.html'"><img src="https://nexusbytedev.github.io/Website/assets/media/icons/store.png"><span>Store</span></div>
-            <div class="menu-option" onclick="location.href='https://nexusbytedev.github.io/Website/main/downloads/explore-downloads.html'"><img gsrc="https://nexusbytedev.github.io/Website/assets/media/icons/downloads.pn"><span>Downloads</span></div>
+            <div class="menu-option" onclick="location.href='https://nexusbytedev.github.io/Website/main/downloads/explore-downloads.html'"><img src="https://nexusbytedev.github.io/Website/assets/media/icons/downloads.png"><span>Downloads</span></div>
             <div class="menu-option" onclick="location.href='https://nexusbytedev.github.io/Website/main/music/explore-music.html'"><img src="https://nexusbytedev.github.io/Website/assets/media/icons/music.png"><span>Music</span></div>
             <div class="menu-option" onclick="location.href='https://nexusbytedev.github.io/Website/main/entertainment/explore-entertainment.html'"><img src="https://nexusbytedev.github.io/Website/assets/media/icons/entertainment.png"><span>Entertainment</span></div>
             <div class="menu-option" onclick="location.href='https://nexusbytedev.github.io/Website/main/blog/nexusbyte-blog.html'"><img src="https://nexusbytedev.github.io/Website/assets/media/icons/blog.png"><span>Blog</span></div>
