--- a/main/search.html
+++ b/main/search.html
@@ -309,11 +309,20 @@ function toggleOption(el) {
 <body>
 
 <div class="nav">
-    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/home.png">
-    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/search.png">
-    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/account.png">
-    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/settings.png">
-    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/menu.png" onclick="openMenu()">
+    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/home.png"
+         onclick="location.href='https://nexusbytedev.github.io/Website/main/landing-page.html'">
+
+    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/search.png"
+         onclick="location.href='https://nexusbytedev.github.io/Website/main/search.html'">
+
+    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/account.png"
+         onclick="location.href='https://nexusbytedev.github.io/Website/main/account/login.html'">
+
+    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/settings.png"
+         onclick="location.href='https://nexusbytedev.github.io/Website/main/settings/general-settings.html'">
+
+    <img src="https://nexusbytedev.github.io/Website/assets/media/icons/menu.png"
+         onclick="openMenu()">
 </div>
 
 <div id="menu">
